--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.8",
+    "react-toggle": "^4.1.1",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-toggle": "^4.0.2",
     "@types/styled-components": "^5.1.2"
   }
 }
